<resources>
    <string name="app_name">Quexp</string>

    <string name="intro_button_start">Selanjutnya</string>
    <string name="intro_button_discover">Mulai Jelajahi</string>

    <string name="text_masuk">Masuk</string>
    <string name="text_daftar">Daftar</string>

    <string name="error_email">Masukkan Email yang benar!</string>
    <string name="error_password">Password tidak boleh kurang dari 8</string>
    <string name="error_field">Bagian ini harus diisi!</string>
    <string name="error_repeat_password">Password tidak cocok!</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="masukkan_email">Masukkan Email</string>

    <string name="btn_login_register">
    <![CDATA[
    <font color=#000000>%1$s </font><font color=#4285F4>%2$s</font>
    ]]>
    </string>
    <string name="text_allow_location">Izinkan Akses Lokasi</string>
    <string name="permission_location_description">Jangan khawatir data Anda bersifat pribadi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_welcome">Selamat Datang</string>
    <string name="text_roadmap">Road Map</string>
    <string name="text_klik_disini">Lihat Misi</string>
    <string name="text_kembali">Kembali</string>
    <string name="text_progress_anda">Progress Anda Saat Ini :</string>
    <string name="text_map">Map</string>
    <string name="text_long">The 135-foot catamaran The 135-foot catamaran features space-age modernism and above-deck sleeping accommodations The 135-foot catamaran features space-age modernism and above-deck sleeping accommodations The 135-foot catamaran features space-age modernism and above-deck sleeping accommodations features space-age modernism and above-deck sleeping accommodations\n\nThe 135-foot catamaran features space-age modernism and above-deck sleeping accommodations The 135-foot catamaran features space-age modernism and above-deck sleeping accommodations The 135-foot catamaran features space-age modernism and above-deck sleeping accommodations</string>
    <string name="text_short">The 135-foot catamaran features space-age</string>
    <string name="text_bar_search">Ke mana Anda\ningin menjelajah hari ini?</string>
    <string name="text_search">Cari</string>
    <string name="text_logout">Logout</string>
    <string name="text_lainnya">Lainnya</string>
    <string name="text_pengaturan_akun">Pengaturan Akun</string>
    <string name="text_pengaturan">Pengaturan</string>

    <string name="privacy_policy">

    </string>
    <string name="text_kota">Kota</string>
    <string name="text_nomor_pengguna">Nomor Pengguna</string>
    <string name="text_nama_pengguna_username">Nama Pengguna (username)</string>
    <string name="text_nama_pengguna">Nama Pengguna</string>
    <string name="text_perbarui">Perbarui</string>
    <string name="text_misi_yang_tersedia">Misi Yang Tersedia</string>

</resources>