<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_setting"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_setting_white"
        android:drawablePadding="4dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/text_pengaturan"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_username"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txt_username" />

                <TextView
                    android:id="@+id/txt_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/img_profile"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Bintang Arkaan Amin" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/gray_9a_50" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="12dp"
                android:text="@string/text_pengaturan_akun"
                android:textColor="@color/gray_ad"
                android:textSize="16sp" />

            <include
                android:id="@+id/item_change_password"
                layout="@layout/item_setting" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray_9a_50" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="12dp"
                android:text="@string/text_lainnya"
                android:textColor="@color/gray_ad"
                android:textSize="16sp" />

            <include
                android:id="@+id/item_tentang_kami"
                layout="@layout/item_setting" />

            <include
                android:id="@+id/item_kebijakan_privasi"
                layout="@layout/item_setting" />

            <include
                android:id="@+id/item_syarat_ketentuan"
                layout="@layout/item_setting" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#B62F2F"
                android:paddingVertical="10dp"
                android:text="@string/text_logout"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>